--- a/web/config/server_config.json
+++ b/web/config/server_config.json
@@ -2,7 +2,8 @@
   "development": {
     "app": {
       "name": "Tufts SAML app",
-      "port": 3000
+      "port": 3000,
+      "cookieDomain": ".uit.tufts.edu"
     },
     "passport": {
       "strategy": "saml",
